Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20191

Clang: Crash when closing a document

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.7.0-beta1
    • Qt Creator 4.6.1
    • C/C++/Obj-C++ Support
    • None
    • Windows 7, Qt 5.10.1, Clang Code Model

      I closed many files by holding Ctrl+W, then Creator crashed:

       Trace:

      7  UnhandledExceptionFilter                                                              kernel32                              0x7752bcac    
      8  EtwEventSetInformation                                                                ntdll                                 0x77630108    
      9  _C_specific_handler                                                                   ntdll                                 0x775c7958    
      10 RtlDecodePointer                                                                      ntdll                                 0x775d812d    
      11 RtlUnwindEx                                                                           ntdll                                 0x775c855f    
      12 KiUserExceptionDispatcher                                                             ntdll                                 0x775fbcb8    
      13 RtlAnsiStringToUnicodeString                                                          ntdll                                 0x775ff23c    
      14 free                                                                                  ucrtbase                              0x7feed0642cb 
      15 QVector<ClangBackEnd::TokenInfoContainer>::freeData                                   qvector.h                        530  0x7feb57c106b 
      16 ClangCodeModel::Internal::ClangEditorDocumentProcessor::~ClangEditorDocumentProcessor clangeditordocumentprocessor.cpp 113  0x7feb57bed2d 
      17 ClangCodeModel::Internal::ClangEditorDocumentProcessor::`scalar deleting destructor'  ClangCodeModel4                       0x7feb57bf554 
      18 CppEditor::Internal::CppEditorDocument::~CppEditorDocument                            CppEditor4                            0x7feb3b387e6 
      19 CppEditor::Internal::CppEditorDocument::`scalar deleting destructor'                  CppEditor4                            0x7feb3b38b94 
      20 TextEditor::Internal::TextEditorWidgetPrivate::~TextEditorWidgetPrivate               texteditor.cpp                   829  0x7feb1ae1288 
      21 TextEditor::Internal::TextEditorWidgetPrivate::`scalar deleting destructor'           TextEditor4                           0x7feb1ae4464 
      22 TextEditor::TextEditorWidget::~TextEditorWidget                                       texteditor.cpp                   1020 0x7feb1ae0f02 
      23 CppEditor::Internal::CppEditorWidget::`scalar deleting destructor'                    CppEditor4                            0x7feb3b3f42b 
      24 TextEditor::BaseTextEditor::~BaseTextEditor                                           texteditor.cpp                   7789 0x7feb1ae0716 
      25 CppEditor::Internal::CppEditor::`scalar deleting destructor'                          CppEditor4                            0x7feb3b375b5 
      26 Core::Internal::EditorManagerPrivate::closeEditors                                    editormanager.cpp                1435 0x7feb1cd1f04 
      27 Core::EditorManager::closeDocument                                                    editormanager.cpp                2864 0x7feb1cd0ca5 
      28 Core::Internal::EditorManagerPrivate::closeEditorOrDocument                           editormanager.cpp                1309 0x7feb1cd0f1e 
      29 QMetaObject::activate                                                                 Qt5Core                               0x7feb24eb6f1 
      30 QAction::triggered                                                                    Qt5Widgets                            0x7feb352e5c3 
      31 QMetaObject::activate                                                                 Qt5Core                               0x7feb24eb6f1 
      32 QAction::activate                                                                     Qt5Widgets                            0x7feb3528122 
      33 QAction::event                                                                        Qt5Widgets                            0x7feb3528fd6 
      34 QApplicationPrivate::notify_helper                                                    Qt5Widgets                            0x7feb3538b30 
      35 QApplication::notify                                                                  Qt5Widgets                            0x7feb35379b7 
      36 QCoreApplication::notifyInternal2                                                     Qt5Core                               0x7feb24cc119 
      37 QShortcutMap::dispatchEvent                                                           Qt5Gui                                0x7feb29243f6 
      38 QShortcutMap::tryShortcut                                                             Qt5Gui                                0x7feb2925c73 
      39 QWindowSystemInterface::handleShortcutEvent                                           Qt5Gui                                0x7feb28e1c96 
      40 QGuiApplicationPrivate::processKeyEvent                                               Qt5Gui                                0x7feb28fd01c 
      41 QWindowSystemInterface::sendWindowSystemEvents                                        Qt5Gui                                0x7feb28e32fb 
      42 QEventDispatcherWin32::processEvents                                                  Qt5Core                               0x7feb2515a65 
      43 TranslateMessageEx                                                                    USER32                                0x773a9bbd    
      44 TranslateMessage                                                                      USER32                                0x773a98c2    
      45 QEventDispatcherWin32::processEvents                                                  Qt5Core                               0x7feb2515236 
      46 qt_plugin_query_metadata                                                              qwindows                              0x7feb21e9b39 
      47 QEventLoop::exec                                                                      Qt5Core                               0x7feb24c7fd3 
      48 QCoreApplication::exec                                                                Qt5Core                               0x7feb24cad74 
      49 main                                                                                  main.cpp                         546  0x13f358a8f   
      50 WinMain                                                                               qtcreator                             0x13f35a4c4   
      51 __scrt_common_main_seh                                                                exe_common.inl                   253  0x13f3596a3   
      52 BaseThreadInitThunk                                                                   kernel32                              0x774a59cd    
      53 RtlUserThreadStart                                                                    ntdll                                 0x775da561    

        For Gerrit Dashboard: QTCREATORBUG-20191
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes