Clang: Fix heap-use-after-free in ClangCurrentDocumentFilter

...when closing editors fast (e.g. holding Ctrl+W).

Due to the queued connection the slot was invoked after the deletion of
the editor. There is no point in having a queued connection here, so
remove it.

Task-number: QTCREATORBUG-20191
Change-Id: I3872f8046b56f93c9aac832feccfd911d39e5995
Reviewed-by: Ivan Donchevskii <ivan.donchevskii@qt.io>